# django-filter-stubs

./: .gitignore  .travis.yml  LICENSE.txt  Pipfile  README.md  pyproject.toml  pytest.ini  requirements-3.6.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
django_filters-stubs/: filters.pyi  filterset.pyi  widgets.pyi
django_filters-stubs/rest_framework/: filters.pyi
tests/: django_filters_test_settings.py  mypy.ini  test_filter.yml  test_imports.yml  test_rest_framework.yml
