[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-filter-stubs"
version = "0.1.3"
description = "PEP-484 stubs for django-filter"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "Davis Raymond Muro", email = "davis.ray.muro@gmail.com"},
]
license= {text = "MIT License"}
dependencies = [
    "mypy>=0.750",
    "django-stubs>=1.3.0",
    "djangorestframework-stubs>=0.4.0",
    "typing-extensions>=3.7.4",
]
classifiers=[
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
]

[project.urls]
Homepage="https://github.com/DavisRayM/django-filter-stubs"
Repository="https://github.com/DavisRayM/django-filter-stubs"
Issues="https://github.com/DavisRayM/django-filter-stubs/issues"

[dependency-groups]
dev = [
    "black>=23.3.0",
    "flake8>=5.0.4",
    "isort>=5.11.5",
    "pytest-mypy-plugins>=2.0.0",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[tool.flake8]
max-line-length=88
extend-ignore="E203"
